# Axiom-Hive-App-Assistant

./: .env.example  .gitignore  .markdownlintrc.json  AXIOM_HIVE_FRAMEWORK.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  OPERATIONAL_PROTOCOLS.md  PROJECT_SUMMARY.md  README.md  README_PUBLIC.md  SECURITY.md  SUPPORT.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
config/: boundaries.json  llm_config.json  rules.json  sources.yaml  thresholds.json
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  GOVERNANCE.md  PRIVACY.md  USAGE.md
scripts/: build_index.py  download_sample_corpus.py  ingest_corpus.py  verify_installation.py
src/: app.py
src/backend/: __init__.py  main.py
src/backend/api/: __init__.py
src/backend/core/: __init__.py  assistant.py  auditor.py  contradiction.py  fact_checker.py  intent_classifier.py
src/backend/retrieval/: __init__.py  document_loader.py  ingest_service.py  searcher.py  vector_store.py
src/backend/services/: __init__.py  auth_service.py  feedback_service.py  knowledge_service.py  update_service.py
src/backend/utils/: __init__.py  cache.py  citation.py  crypto.py  formatter.py  sanitizer.py  similarity.py
src/backend/workers/: __init__.py
src/core/: __init__.py  assistant.py  validators.py
src/frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
src/frontend/src/: App.tsx
src/frontend/src/components/: ConfidenceBadge.tsx  MessageBubble.tsx  SettingsPanel.tsx  SourceCard.tsx
src/frontend/src/pages/: Admin.tsx  Chat.tsx  History.tsx
src/frontend/src/store/: index.ts
tests/: run_tests.py
tests/integration/: test_end_to_end.py
tests/unit/: test_validators.py  test_vector_store.py
